--- a/Project.Lottery.Webforms/App_Themes/Main/Main.css
+++ b/Project.Lottery.Webforms/App_Themes/Main/Main.css
@@ -15,7 +15,7 @@
   position: relative;
   left: 4%;
 }
-#Container_LeftNav {
+.Container_LeftNav {
   border: 1px solid #000000;
   height: 100vh;
   width: 20%;
@@ -26,16 +26,11 @@
 .Container_LeftNav_Avatar {
   border: 1px solid blue;
   width: 100%;
-  height: 144px;
-}
-.Container_Header {
-  border: 1px solid red;
-  width: 100%;
-  height: 96px;
+  height: 214px;
 }
 .Container_ContentBody_Nav {
   border: 1px solid orange;
-  height: 48px;
+  height: 70px;
 }
 .Container_ContentBody {
   border: 1px solid yellow;
@@ -62,21 +57,92 @@
   width: 100%;
   height: 48px;
 }
-.containerL1 {
+.Container_Header {
+  position: relative;
   border: 1px solid red;
+  background-color: rgba(10, 9, 9, 0.3);
+  width: 100%;
+  height: 144px;
 }
-.containerL2 {
-  border: 1px solid orange;
+.Container_Header .Header_Banner {
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: -1;
+  height: inherit;
+  width: inherit;
+  background: url('Images/lottery-banner.jpg') center;
 }
-.containerL3 {
-  border: 1px solid yellow;
+.IContainer_ContentBody_Nav {
+  display: block;
+  position: relative;
+  min-height: inherit;
+  font-size: 21px;
 }
-.containerL4 {
-  border: 1px solid green;
+.IContainer_ContentBody_Nav .ILotteryGame_DropDownList {
+  display: block;
+  float: left;
+  border: 1px solid #000;
 }
-.containerL5 {
-  border: 1px solid blue;
+.IContainer_ContentBody_Nav .ILotteryGame_DropDownList label {
+  padding: 0 1em;
+  line-height: 70px;
 }
-.containerL6 {
-  border: 1px solid purple;
+.IContainer_ContentBody_Nav .ILotteryGame_DropDownList select {
+  height: 27px;
+  width: 220px;
 }
+.IContainer_ContentBody_Nav .ILotteryGame_AddButton {
+  display: block;
+  float: left;
+  padding-left: 21px;
+  min-height: inherit;
+}
+.IContainer_ContentBody_Nav .ILotteryGame_AddButton span {
+  position: relative;
+  display: block;
+  overflow: hidden;
+  min-height: 48px;
+  margin-top: 12px;
+  width: 180px;
+  text-align: center;
+  font-size: 18px;
+  text-transform: uppercase;
+  border: 1px solid #000;
+}
+.IContainer_ContentBody_Nav .ILotteryGame_AddButton span label {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 180px;
+  line-height: 52px;
+  display: inline-block;
+  transition: all 1.5s;
+}
+.IContainer_ContentBody_Nav .ILotteryGame_AddButton span input {
+  position: absolute;
+  top: -120px;
+  left: -4px;
+  width: 184px;
+  height: 80px;
+  background-color: rgba(255, 0, 0, 0.84);
+  transition: all 1s;
+  padding: 18px;
+  font-size: 18px;
+  text-transform: uppercase;
+}
+.IContainer_ContentBody_Nav .ILotteryGame_AddButton span:hover input {
+  top: -15px;
+  left: -4px;
+  transition: all 1s;
+}
+.IContainer_ContentBody_Nav .ILotteryGame_AddButton span:hover label {
+  color: transparent;
+  transition: all .5s;
+}
+/*.containerL1 { border: 1px solid red;  }
+.containerL2 { border: 1px solid orange; }
+.containerL3 { border: 1px solid yellow; }
+.containerL4 { border: 1px solid green; }
+.containerL5 { border: 1px solid blue; }
+.containerL6 { border: 1px solid purple; }*/
