--- a/Project.Lottery.Webforms/App_Themes/Main/Main.less
+++ b/Project.Lottery.Webforms/App_Themes/Main/Main.less
@@ -6,26 +6,164 @@
 }
 
 body {
+
 }
 
 .cf { clear: both; display: table; }
 
-#Container_Page { border: 1px solid #00ffff; height: 100%; margin: auto; min-width: 100%; position: relative; left: 4%; }
+//=============================================================||
+//=======   CONTAINER || BASE-STRUCTURE || GENERAL  ========/
+//=============================================================||
 
-#Container_LeftNav { border: 1px solid #000000; height: 100vh; width: 20%; position: fixed; left: -16%; top: 0; }
-.Container_LeftNav_Avatar { border: 1px solid blue; width: 100%; height: 144px;}
-.Container_Header { border: 1px solid red; width: 100%; height: 96px; }
-.Container_ContentBody_Nav { border: 1px solid orange; height: 48px; }
+#Container_Page { border: 1px solid #00ffff; height: 100%; margin: auto; min-width: 100%; position: relative; left: 4%; }
+.Container_LeftNav { border: 1px solid #000000; height: 100vh; width: 20%; position: fixed; left: -16%; top: 0; }
+.Container_LeftNav_Avatar { border: 1px solid blue; width: 100%; height: 214px;}
+
+.Container_ContentBody_Nav { border: 1px solid orange; height: 70px; }
+
 .Container_ContentBody { border: 1px solid yellow; width: 100%; min-height: 80vh; }
 .Container_ContentBody_Form { border: 1px solid green; width: 27%; min-height: inherit; float: left; display: block; }
 .Container_ContentBody_ListView { border: 1px solid blue; width: 73%; min-height: inherit; float: right; }
 .Container_Footer { border: 1px solid purple; position: fixed; bottom: 0; width: 100%; height: 48px; }
 
+//=============================================================||
+//=======   CONTAINER || PAGE || CUSTOM  ========/
+//=============================================================||
 
-.containerL1 { border: 1px solid red;  }
+
+
+//=============================================================||
+//=======   CONTAINER || HEADER ||  CUSTOM  ========/
+//=============================================================||
+
+.Container_Header {
+    position: relative;
+    border: 1px solid red;
+    background-color: rgba(10, 9, 9, 0.30);
+    
+    width: 100%; 
+    height: 144px;
+    
+    .Header_Banner{
+        position: absolute;
+        top: 0;
+        left: 0;
+        z-index: -1;
+        height: inherit;
+        width: inherit;
+        background: url('Images/lottery-banner.jpg') center;
+    }   
+}
+
+
+//=============================================================||
+//=======   CONTAINER || CONTENT-BODY ||  CUSTOM  ========/
+//=============================================================||
+
+.IContainer_ContentBody_Nav {
+    display: block;
+    position: relative;
+    min-height: inherit;
+
+    font-size: 21px;
+
+    .ILotteryGame_DropDownList {
+        display: block;
+        float: left;
+        border: 1px solid #000;
+
+        label {
+            padding: 0 1em;
+            line-height: 70px;
+        }
+
+        select {
+            height: 27px;
+            width: 220px;
+            
+        }
+    }
+
+    .ILotteryGame_AddButton {
+        display: block;
+        float: left;
+        padding-left: 21px;
+        min-height: inherit;
+        
+        span {
+            position: relative;
+            display: block;
+            overflow: hidden;
+
+            min-height: 48px;
+            margin-top: 12px;
+            width: 180px;
+
+            text-align: center;
+            font-size: 18px;
+            text-transform: uppercase;
+
+            border: 1px solid #000;
+
+            label {
+                position: absolute;
+                top: 0;
+                left: 0;
+                width: 180px;
+
+                line-height: 52px;
+                display: inline-block;
+                transition: all 1.5s;
+            }
+
+            input {
+                position: absolute;
+                top: -120px;
+                left: -4px;
+
+                width: 184px;
+                height: 80px;
+                background-color: rgba(255, 0, 0, 0.84);
+
+                transition: all 1s;
+                padding: 18px;
+                font-size: 18px;
+                text-transform: uppercase;
+            }
+        }
+
+        span:hover {
+            input {
+                top: -15px;
+                left: -4px;
+                transition: all 1s;
+            }
+            label {
+                color: transparent;
+                transition: all .5s;
+            }
+        }
+
+    }
+
+}
+
+//=============================================================||
+//=======   CONTAINER || CONTENT-BODY-FORM ||  CUSTOM  ========/
+//=============================================================||
+
+
+
+//=============================================================||
+//=======   CONTAINER || CONTENT-BODY-VIEW ||  CUSTOM  ========/
+//=============================================================||
+
+
+
+/*.containerL1 { border: 1px solid red;  }
 .containerL2 { border: 1px solid orange; }
 .containerL3 { border: 1px solid yellow; }
 .containerL4 { border: 1px solid green; }
 .containerL5 { border: 1px solid blue; }
-.containerL6 { border: 1px solid purple; }
+.containerL6 { border: 1px solid purple; }*/
 
