--- a/Project.Lottery.Webforms/App_Themes/Main/Main.css
+++ b/Project.Lottery.Webforms/App_Themes/Main/Main.css
@@ -1,32 +1,28 @@
 ﻿* {
   padding: 0;
   margin: 0;
+  -moz-box-sizing: border-box;
+  -webkit-box-sizing: border-box;
   box-sizing: border-box;
+}
+body {
+  overflow-x: hidden;
 }
 .cf {
   clear: both;
   display: table;
 }
 #Container_Page {
-  border: 1px solid #00ffff;
   height: 100%;
   margin: auto;
-  min-width: 100%;
+  min-width: 80%;
   position: relative;
-  left: 4%;
-}
-.Container_LeftNav {
-  border: 1px solid #000000;
-  height: 100vh;
-  width: 20%;
-  position: fixed;
-  left: -16%;
-  top: 0;
-}
-.Container_LeftNav_Avatar {
-  border: 1px solid blue;
-  width: 100%;
-  height: 214px;
+  left: 0;
+  -moz-transition: 1s all;
+  -o-transition: 1s all;
+  -webkit-transition: 1s all;
+  transition: 1s all;
+  border: 1px solid #00ffff;
 }
 .Container_ContentBody_Nav {
   border: 1px solid orange;
@@ -37,25 +33,80 @@
   width: 100%;
   min-height: 80vh;
 }
-.Container_ContentBody_Form {
-  border: 1px solid green;
-  width: 27%;
-  min-height: inherit;
-  float: left;
-  display: block;
-}
-.Container_ContentBody_ListView {
-  border: 1px solid blue;
-  width: 73%;
-  min-height: inherit;
-  float: right;
-}
 .Container_Footer {
   border: 1px solid purple;
   position: fixed;
   bottom: 0;
   width: 100%;
   height: 48px;
+}
+.Container_LeftNav {
+  border: 1px solid #000000;
+  min-height: 100vh;
+  width: 20%;
+  position: fixed;
+  left: -20%;
+  top: 0;
+  -moz-transition: 1s all;
+  -o-transition: 1s all;
+  -webkit-transition: 1s all;
+  transition: 1s all;
+}
+.Container_LeftNav .Container_LeftNav_Avatar {
+  border: 1px solid blue;
+  width: 100%;
+  height: 214px;
+}
+#Container_ExpandControlLabel {
+  position: absolute;
+  left: 0;
+  z-index: 6;
+  min-height: 100%;
+  width: 2%;
+  text-align: center;
+  line-height: 100vh;
+  -moz-transition: 1s all;
+  -o-transition: 1s all;
+  -webkit-transition: 1s all;
+  transition: 1s all;
+}
+#Container_ExpandControlLabel:hover {
+  background-color: red;
+  -moz-transition: 1s all;
+  -o-transition: 1s all;
+  -webkit-transition: 1s all;
+  transition: 1s all;
+}
+#Container_ExpandControl {
+  position: absolute;
+  left: 0;
+  z-index: 5;
+  width: 44px;
+  visibility: hidden;
+}
+#Container_ExpandControl:checked ~ #Container_ExpandControlLabel {
+  background-color: red;
+  left: 0%;
+  -moz-transition: 1s all;
+  -o-transition: 1s all;
+  -webkit-transition: 1s all;
+  transition: 1s all;
+}
+#Container_ExpandControl:checked ~ #Container_Page {
+  left: 22%;
+  z-index: 5;
+  -moz-transition: 1s all;
+  -o-transition: 1s all;
+  -webkit-transition: 1s all;
+  transition: 1s all;
+}
+#Container_ExpandControl:checked ~ #Container_Page .Container_LeftNav {
+  left: 2%;
+  z-index: 5;
+  -moz-transition: 1s all;
+  -o-transition: 1s all;
+  -webkit-transition: 1s all;
+  transition: 1s all;
 }
 .Container_Header {
   position: relative;
@@ -117,6 +168,9 @@
   width: 180px;
   line-height: 52px;
   display: inline-block;
+  -moz-transition: all 1.5s;
+  -o-transition: all 1.5s;
+  -webkit-transition: all 1.5s;
   transition: all 1.5s;
 }
 .IContainer_ContentBody_Nav .ILotteryGame_AddButton span input {
@@ -125,7 +179,10 @@
   left: -4px;
   width: 184px;
   height: 80px;
-  background-color: rgba(255, 0, 0, 0.84);
+  background-color: #a90329;
+  -moz-transition: all 1s;
+  -o-transition: all 1s;
+  -webkit-transition: all 1s;
   transition: all 1s;
   padding: 18px;
   font-size: 18px;
@@ -134,11 +191,30 @@
 .IContainer_ContentBody_Nav .ILotteryGame_AddButton span:hover input {
   top: -15px;
   left: -4px;
+  -moz-transition: all 1s;
+  -o-transition: all 1s;
+  -webkit-transition: all 1s;
   transition: all 1s;
 }
 .IContainer_ContentBody_Nav .ILotteryGame_AddButton span:hover label {
   color: transparent;
+  -moz-transition: all .5s;
+  -o-transition: all .5s;
+  -webkit-transition: all .5s;
   transition: all .5s;
+}
+.Container_ContentBody_Form {
+  border: 1px solid green;
+  width: 27%;
+  min-height: inherit;
+  float: left;
+  display: block;
+}
+.Container_ContentBody_ListView {
+  border: 1px solid blue;
+  width: 73%;
+  min-height: inherit;
+  float: right;
 }
 /*.containerL1 { border: 1px solid red;  }
 .containerL2 { border: 1px solid orange; }
