--- a/Project.Lottery.Webforms/App_Themes/Main/Main.less
+++ b/Project.Lottery.Webforms/App_Themes/Main/Main.less
@@ -2,33 +2,143 @@
 * {
     padding: 0;
     margin: 0;
+    -moz-box-sizing: border-box;
+    -webkit-box-sizing: border-box;
     box-sizing: border-box;
 }
 
 body {
-
+    overflow-x: hidden;
 }
 
-.cf { clear: both; display: table; }
+.cf {
+    clear: both;
+    display: table;
+}
 
 //=============================================================||
 //=======   CONTAINER || BASE-STRUCTURE || GENERAL  ========/
 //=============================================================||
 
-#Container_Page { border: 1px solid #00ffff; height: 100%; margin: auto; min-width: 100%; position: relative; left: 4%; }
-.Container_LeftNav { border: 1px solid #000000; height: 100vh; width: 20%; position: fixed; left: -16%; top: 0; }
-.Container_LeftNav_Avatar { border: 1px solid blue; width: 100%; height: 214px;}
+#Container_Page {
+    height: 100%;
+    margin: auto;
+    min-width: 80%;
+    position: relative;
+    left: 0;
 
-.Container_ContentBody_Nav { border: 1px solid orange; height: 70px; }
+    -moz-transition: 1s all;
+    -o-transition: 1s all;
+    -webkit-transition: 1s all;
+    transition: 1s all;
+    border: 1px solid #00ffff;
+}
 
-.Container_ContentBody { border: 1px solid yellow; width: 100%; min-height: 80vh; }
-.Container_ContentBody_Form { border: 1px solid green; width: 27%; min-height: inherit; float: left; display: block; }
-.Container_ContentBody_ListView { border: 1px solid blue; width: 73%; min-height: inherit; float: right; }
-.Container_Footer { border: 1px solid purple; position: fixed; bottom: 0; width: 100%; height: 48px; }
+.Container_ContentBody_Nav {
+    border: 1px solid orange;
+    height: 70px;
+}
+
+.Container_ContentBody {
+    border: 1px solid yellow;
+    width: 100%;
+    min-height: 80vh;
+}
+
+.Container_Footer {
+    border: 1px solid purple;
+    position: fixed;
+    bottom: 0;
+    width: 100%;
+    height: 48px;
+}
 
 //=============================================================||
 //=======   CONTAINER || PAGE || CUSTOM  ========/
 //=============================================================||
+
+
+//=============================================================||
+//=======   CONTAINER || LEFT-NAVIGATION ||  CUSTOM  ========/
+//=============================================================||
+
+.Container_LeftNav {
+    border: 1px solid #000000;
+    min-height: 100vh;
+    width: 20%;
+    position: fixed;
+    left: -20%;
+    top: 0;
+    -moz-transition: 1s all;
+    -o-transition: 1s all;
+    -webkit-transition: 1s all;
+    transition: 1s all;
+
+    .Container_LeftNav_Avatar {
+        border: 1px solid blue;
+        width: 100%;
+        height: 214px;
+    }
+}
+
+#Container_ExpandControlLabel {
+    position: absolute;
+    left: 0;
+    z-index: 6;
+    min-height: 100%;
+    width: 2%;
+    text-align: center;
+    line-height: 100vh;
+
+    -moz-transition: 1s all;
+    -o-transition: 1s all;
+    -webkit-transition: 1s all;
+    transition: 1s all;
+}
+
+#Container_ExpandControlLabel:hover {
+    background-color: red;
+    -moz-transition: 1s all;
+    -o-transition: 1s all;
+    -webkit-transition: 1s all;
+    transition: 1s all;
+}
+
+#Container_ExpandControl {
+    position: absolute;
+    left: 0;
+    z-index: 5;
+    width: 44px;
+    visibility: hidden;
+}
+
+#Container_ExpandControl:checked ~ #Container_ExpandControlLabel {
+    background-color: red;
+    left: 0%;
+    -moz-transition: 1s all;
+    -o-transition: 1s all;
+    -webkit-transition: 1s all;
+    transition: 1s all;
+}
+
+#Container_ExpandControl:checked ~ #Container_Page {
+    left: 22%;
+    z-index: 5;
+    -moz-transition: 1s all;
+    -o-transition: 1s all;
+    -webkit-transition: 1s all;
+    transition: 1s all;
+
+    .Container_LeftNav {
+        left: 2%;
+        z-index: 5;
+        -moz-transition: 1s all;
+        -o-transition: 1s all;
+        -webkit-transition: 1s all;
+        transition: 1s all;
+    }
+}
+
 
 
 
@@ -40,11 +150,10 @@ body {
     position: relative;
     border: 1px solid red;
     background-color: rgba(10, 9, 9, 0.30);
-    
-    width: 100%; 
+    width: 100%;
     height: 144px;
-    
-    .Header_Banner{
+
+    .Header_Banner {
         position: absolute;
         top: 0;
         left: 0;
@@ -52,7 +161,7 @@ body {
         height: inherit;
         width: inherit;
         background: url('Images/lottery-banner.jpg') center;
-    }   
+    }
 }
 
 
@@ -64,7 +173,6 @@ body {
     display: block;
     position: relative;
     min-height: inherit;
-
     font-size: 21px;
 
     .ILotteryGame_DropDownList {
@@ -80,7 +188,6 @@ body {
         select {
             height: 27px;
             width: 220px;
-            
         }
     }
 
@@ -89,20 +196,17 @@ body {
         float: left;
         padding-left: 21px;
         min-height: inherit;
-        
+
         span {
             position: relative;
             display: block;
             overflow: hidden;
-
             min-height: 48px;
             margin-top: 12px;
             width: 180px;
-
             text-align: center;
             font-size: 18px;
             text-transform: uppercase;
-
             border: 1px solid #000;
 
             label {
@@ -110,9 +214,11 @@ body {
                 top: 0;
                 left: 0;
                 width: 180px;
-
                 line-height: 52px;
                 display: inline-block;
+                -moz-transition: all 1.5s;
+                -o-transition: all 1.5s;
+                -webkit-transition: all 1.5s;
                 transition: all 1.5s;
             }
 
@@ -120,11 +226,12 @@ body {
                 position: absolute;
                 top: -120px;
                 left: -4px;
-
                 width: 184px;
                 height: 80px;
-                background-color: rgba(255, 0, 0, 0.84);
-
+                background-color: rgba(169,3,41,1);
+                -moz-transition: all 1s;
+                -o-transition: all 1s;
+                -webkit-transition: all 1s;
                 transition: all 1s;
                 padding: 18px;
                 font-size: 18px;
@@ -136,27 +243,46 @@ body {
             input {
                 top: -15px;
                 left: -4px;
+                -moz-transition: all 1s;
+                -o-transition: all 1s;
+                -webkit-transition: all 1s;
                 transition: all 1s;
             }
+
             label {
                 color: transparent;
+                -moz-transition: all .5s;
+                -o-transition: all .5s;
+                -webkit-transition: all .5s;
                 transition: all .5s;
             }
         }
-
     }
-
 }
 
 //=============================================================||
 //=======   CONTAINER || CONTENT-BODY-FORM ||  CUSTOM  ========/
 //=============================================================||
 
+.Container_ContentBody_Form {
+    border: 1px solid green;
+    width: 27%;
+    min-height: inherit;
+    float: left;
+    display: block;
+}
 
 
 //=============================================================||
 //=======   CONTAINER || CONTENT-BODY-VIEW ||  CUSTOM  ========/
 //=============================================================||
+
+.Container_ContentBody_ListView {
+    border: 1px solid blue;
+    width: 73%;
+    min-height: inherit;
+    float: right;
+}
 
 
 
