--- a/Project.Lottery.Webforms/App_Themes/Main/Main.less
+++ b/Project.Lottery.Webforms/App_Themes/Main/Main.less
@@ -53,9 +53,11 @@ body {
     height: 48px;
 }
 
+
 //=============================================================||
 //=======   CONTAINER || PAGE || CUSTOM  ========/
 //=============================================================||
+
 
 
 //=============================================================||
@@ -138,8 +140,6 @@ body {
         transition: 1s all;
     }
 }
-
-
 
 
 //=============================================================||
@@ -228,11 +228,13 @@ body {
                 left: -4px;
                 width: 184px;
                 height: 80px;
-                background-color: rgba(169,3,41,1);
-                -moz-transition: all 1s;
-                -o-transition: all 1s;
-                -webkit-transition: all 1s;
-                transition: all 1s;
+
+                color: #eee;
+                background-color: red;
+                -moz-transition: all .5s;
+                -o-transition: all .5s;
+                -webkit-transition: all .5s;
+                transition: all .5s;
                 padding: 18px;
                 font-size: 18px;
                 text-transform: uppercase;
@@ -243,10 +245,10 @@ body {
             input {
                 top: -15px;
                 left: -4px;
-                -moz-transition: all 1s;
-                -o-transition: all 1s;
-                -webkit-transition: all 1s;
-                transition: all 1s;
+                -moz-transition: all .5s;
+                -o-transition: all .5s;
+                -webkit-transition: all .5s;
+                transition: all .5s;
             }
 
             label {
@@ -259,6 +261,7 @@ body {
         }
     }
 }
+
 
 //=============================================================||
 //=======   CONTAINER || CONTENT-BODY-FORM ||  CUSTOM  ========/
