--- a/Project.Lottery.Webforms/App_Themes/Main/Main.less
+++ b/Project.Lottery.Webforms/App_Themes/Main/Main.less
@@ -5,6 +5,7 @@
     -moz-box-sizing: border-box;
     -webkit-box-sizing: border-box;
     box-sizing: border-box;
+    font-family: 'Arial Narrow', Arial, sans-serif;
 }
 
 body {
@@ -26,6 +27,8 @@ body {
     min-width: 80%;
     position: relative;
     left: 0;
+    z-index: 0;
+    //background: url(http://api.thumbr.it/whitenoise-361x370.png?);
 
     -moz-transition: 1s all;
     -o-transition: 1s all;
@@ -35,8 +38,10 @@ body {
 }
 
 .Container_ContentBody_Nav {
-    border: 1px solid orange;
+    //border: 1px solid orange;
     height: 70px;
+    width: 100%;
+    /*min-width: 640px;*/
 }
 
 .Container_ContentBody {
@@ -171,29 +176,33 @@ body {
 
 .IContainer_ContentBody_Nav {
     display: block;
+    //border: 1px solid orange;
     position: relative;
-    min-height: inherit;
+    min-width: 680px;
     font-size: 21px;
 
     .ILotteryGame_DropDownList {
-        display: block;
-        float: left;
-        border: 1px solid #000;
+        display: inline-block;
+        vertical-align: top;
 
         label {
+            display: inline-block;
             padding: 0 1em;
             line-height: 70px;
         }
 
         select {
-            height: 27px;
+            display: inline-block;
+            height: 34px;
             width: 220px;
+
+            font-size: 18px;
         }
     }
 
     .ILotteryGame_AddButton {
-        display: block;
-        float: left;
+        display: inline-block;
+        padding-top: 18px;
         padding-left: 21px;
         min-height: inherit;
 
@@ -201,10 +210,11 @@ body {
             position: relative;
             display: block;
             overflow: hidden;
-            min-height: 48px;
-            margin-top: 12px;
+            min-height: 36px;
+
             width: 180px;
             text-align: center;
+
             font-size: 18px;
             text-transform: uppercase;
             border: 1px solid #000;
@@ -214,7 +224,7 @@ body {
                 top: 0;
                 left: 0;
                 width: 180px;
-                line-height: 52px;
+                line-height: 36px;
                 display: inline-block;
                 -moz-transition: all 1.5s;
                 -o-transition: all 1.5s;
@@ -235,7 +245,7 @@ body {
                 -o-transition: all .5s;
                 -webkit-transition: all .5s;
                 transition: all .5s;
-                padding: 18px;
+                padding: 16px;
                 font-size: 18px;
                 text-transform: uppercase;
             }
@@ -243,7 +253,8 @@ body {
 
         span:hover {
             input {
-                top: -15px;
+                font-size: 21px;
+                top: -21px;
                 left: -4px;
                 -moz-transition: all .5s;
                 -o-transition: all .5s;
@@ -268,11 +279,62 @@ body {
 //=============================================================||
 
 .Container_ContentBody_Form {
-    border: 1px solid green;
-    width: 27%;
+    /*border: 1px solid green;*/
+    width: 33%;
+    min-width: 200px;
     min-height: inherit;
+
+    position: relative;
     float: left;
     display: block;
+    
+    padding-left: 2.5em;
+    padding-top: 1.3em;
+
+
+    label, input {
+        display: block;
+        font-size: 18px;
+        margin: .5em 0 .5em;
+    }
+
+    label ~ input {
+        height: 27px;
+        width: 80%;
+        max-width: 220px;
+    }
+
+    input[type="checkbox"] {
+        height: 24px;
+        width: 24px;
+    }
+
+    input[type="number"] {
+        width: 44px;
+        height: 27px;
+        text-align: center;
+        scrollbar-arrow-color: transparent;
+    }
+
+    input[type="Submit"] {
+        position: absolute;
+        bottom: 105px;
+        right: 40px;
+
+        padding: 8px;
+        max-width: 50%;
+
+        background-color: transparent;
+        border: 4px solid #000;
+        transition: 1s all;
+    }
+
+    input[type="Submit"]:hover {
+        background-color: red;
+        border: 4px solid rgba(255, 0, 0, 0.73);
+        transition: 1s all;
+    }
+
 }
 
 
@@ -282,9 +344,41 @@ body {
 
 .Container_ContentBody_ListView {
     border: 1px solid blue;
-    width: 73%;
+    width: 67%;
     min-height: inherit;
     float: right;
+    padding: 12px 8px;
+
+    table {
+        width: 100%;
+        min-width: 800px;
+        border-collapse: collapse;
+
+        th, td {
+            word-wrap: break-word;
+            min-width: 10%;
+
+            text-align: center;
+            font-size: 18px;
+            padding: 6px 0;
+        }
+
+        tr:nth-of-type(2n+1) {
+            background-color: #fff;
+        }
+
+        tr:nth-of-type(2n+2) {
+            background-color: rgba(165, 42, 42, 0.19);
+        }
+
+        input {
+            color: #fff;
+            background-color: red;
+
+            font-size: 18px;
+            padding: 4px;
+        }
+    }
 }
 
 
