Consolidate class utilizing is-a and has-a relationship.

--- a/Project.Lottery.Webforms/MasterPages/BaseSkin.Master
+++ b/Project.Lottery.Webforms/MasterPages/BaseSkin.Master
@@ -17,7 +17,7 @@
 		<form id="form1" runat="server">
 		
 		<input type="checkbox" id="Container_ExpandControl" />
-		<label id="Container_ExpandControlLabel" for="Container_ExpandControl"> > </label>
+		<label id="Container_ExpandControlLabel" for="Container_ExpandControl"></label>
 		<%--  ||  BEGIN-INSET-1  ||==  { PAGE } ==||  --%>
 		<div id="Container_Page">
 
