--- a/Project.Lottery.Webforms/App_Themes/Main/Main.css
+++ b/Project.Lottery.Webforms/App_Themes/Main/Main.css
@@ -8,33 +8,41 @@
 }
 body {
   overflow-x: hidden;
+  position: relative;
+  top: 0;
+  left: 0;
 }
 .cf {
   clear: both;
   display: table;
 }
+a {
+  text-decoration: none;
+}
 #Container_Page {
   height: 100%;
   margin: auto;
-  min-width: 80%;
+  min-width: 100%;
+  min-height: 100vh;
   position: relative;
+  top: 0;
   left: 0;
-  z-index: 0;
+  z-index: 10;
   -moz-transition: 1s all;
   -o-transition: 1s all;
   -webkit-transition: 1s all;
   transition: 1s all;
-  border: 1px solid #00ffff;
 }
 .Container_ContentBody_Nav {
+  border-bottom: 3px solid #000;
   height: 70px;
   width: 100%;
   /*min-width: 640px;*/
 }
 .Container_ContentBody {
-  border: 1px solid yellow;
-  width: 100%;
-  min-height: 80vh;
+  width: 80%;
+  height: inherit;
+  min-width: inherit;
 }
 .Container_Footer {
   border: 1px solid purple;
@@ -44,7 +52,9 @@ body {
   height: 48px;
 }
 .Container_LeftNav {
-  border: 1px solid #000000;
+  border-right: 1px solid #000;
+  box-shadow: rgba(10, 9, 9, 0.3) 1px 3px 3px;
+  z-index: 10;
   min-height: 100vh;
   width: 20%;
   position: fixed;
@@ -56,14 +66,31 @@ body {
   transition: 1s all;
 }
 .Container_LeftNav .Container_LeftNav_Avatar {
-  border: 1px solid blue;
+  border-bottom: 3px solid #000;
   width: 100%;
   height: 214px;
+}
+.Container_LeftNav li {
+  list-style: none;
+  min-height: 34px;
+  padding-top: 16px;
+  padding-bottom: 16px;
+  transition: 1s all;
+}
+.Container_LeftNav a {
+  padding-left: 21px;
+  font-size: 18px;
+}
+.Container_LeftNav li:hover,
+.Container_LeftNav li:visited {
+  color: rgba(10, 9, 9, 0.3);
+  background-color: red;
+  transition: 1s all;
 }
 #Container_ExpandControlLabel {
   position: absolute;
   left: 0;
-  z-index: 6;
+  z-index: 20;
   min-height: 100%;
   width: 2%;
   text-align: center;
@@ -74,7 +101,7 @@ body {
   transition: 1s all;
 }
 #Container_ExpandControlLabel:hover {
-  background-color: red;
+  background-color: rgba(10, 9, 9, 0.3);
   -moz-transition: 1s all;
   -o-transition: 1s all;
   -webkit-transition: 1s all;
@@ -83,29 +110,30 @@ body {
 #Container_ExpandControl {
   position: absolute;
   left: 0;
-  z-index: 5;
+  z-index: 20;
   width: 44px;
   visibility: hidden;
 }
 #Container_ExpandControl:checked ~ #Container_ExpandControlLabel {
-  background-color: red;
-  left: 0%;
+  background-color: rgba(10, 9, 9, 0.3);
+  left: 20%;
+  z-index: 20;
   -moz-transition: 1s all;
   -o-transition: 1s all;
   -webkit-transition: 1s all;
   transition: 1s all;
 }
 #Container_ExpandControl:checked ~ #Container_Page {
-  left: 22%;
-  z-index: 5;
+  left: 20%;
+  z-index: 10;
   -moz-transition: 1s all;
   -o-transition: 1s all;
   -webkit-transition: 1s all;
   transition: 1s all;
 }
 #Container_ExpandControl:checked ~ #Container_Page .Container_LeftNav {
-  left: 2%;
-  z-index: 5;
+  left: 0%;
+  z-index: 20;
   -moz-transition: 1s all;
   -o-transition: 1s all;
   -webkit-transition: 1s all;
@@ -113,8 +141,8 @@ body {
 }
 .Container_Header {
   position: relative;
-  border: 1px solid red;
   background-color: rgba(10, 9, 9, 0.3);
+  box-shadow: 2px 3px 3px rgba(10, 9, 9, 0.3) inset;
   width: 100%;
   height: 144px;
 }
@@ -210,10 +238,9 @@ body {
   transition: all .5s;
 }
 .Container_ContentBody_Form {
-  /*border: 1px solid green;*/
   width: 33%;
   min-width: 200px;
-  min-height: inherit;
+  height: 100%;
   position: relative;
   float: left;
   display: block;
@@ -243,9 +270,10 @@ body {
 }
 .Container_ContentBody_Form input[type="Submit"] {
   position: absolute;
-  bottom: 105px;
+  top: 65vh;
   right: 40px;
   padding: 8px;
+  min-width: 144px;
   max-width: 50%;
   background-color: transparent;
   border: 4px solid #000;
@@ -257,7 +285,7 @@ body {
   transition: 1s all;
 }
 .Container_ContentBody_ListView {
-  border: 1px solid blue;
+  border-left: 3px solid #000;
   width: 67%;
   min-height: inherit;
   float: right;
