--- a/Project.Lottery.Webforms/App_Themes/Main/Main.css
+++ b/Project.Lottery.Webforms/App_Themes/Main/Main.css
@@ -41,7 +41,7 @@ a {
 }
 .Container_ContentBody {
   background: rgba(10, 9, 9, 0.3);
-  width: 100%;
+  width: 100vw;
   height: inherit;
   min-width: inherit;
 }
@@ -89,7 +89,7 @@ a {
   transition: 1s all;
 }
 #Container_ExpandControlLabel {
-  position: absolute;
+  position: fixed;
   left: 0;
   z-index: 20;
   min-height: 100%;
@@ -290,16 +290,19 @@ a {
 }
 .Container_ContentBody_ListView {
   border-left: 3px solid #000;
-  width: 70%;
+  width: 70vw;
+  height: 100%;
   min-height: inherit;
+  overflow-y: auto;
+  overflow-x: hidden;
   display: inline-block;
   padding: 12px 8px;
+  margin-bottom: 70px;
 }
 .Container_ContentBody_ListView table {
-  width: 112%;
+  width: 100%;
   margin-left: 2%;
   text-align: center;
-  min-width: 700px;
   border-collapse: collapse;
 }
 .Container_ContentBody_ListView table th,
