Add additional styles; Add Winning Number Page and add/update, delete and retrieve features.

--- a/Project.Lottery.Webforms/App_Themes/Main/Main.css
+++ b/Project.Lottery.Webforms/App_Themes/Main/Main.css
@@ -17,6 +17,7 @@ body {
   display: table;
 }
 a {
+  color: coral;
   text-decoration: none;
 }
 #Container_Page {
@@ -27,7 +28,7 @@ a {
   position: relative;
   top: 0;
   left: 0;
-  z-index: 10;
+  z-index: 0;
   -moz-transition: 1s all;
   -o-transition: 1s all;
   -webkit-transition: 1s all;
@@ -40,13 +41,13 @@ a {
   /*min-width: 640px;*/
 }
 .Container_ContentBody {
-  background: rgba(10, 9, 9, 0.3);
   width: 100vw;
   height: inherit;
   min-width: inherit;
 }
 .Container_Footer {
   border: 1px solid purple;
+  background-color: #000;
   position: fixed;
   bottom: 0;
   width: 100%;
@@ -54,13 +55,16 @@ a {
 }
 .Container_LeftNav {
   border-right: 1px solid #000;
-  box-shadow: rgba(10, 9, 9, 0.3) 1px 3px 3px;
+  background-color: rgba(10, 9, 9, 0.7);
+  box-shadow: rgba(10, 9, 9, 0.3) 4px 6px 6px;
   z-index: 10;
   min-height: 100vh;
-  width: 20%;
+  min-width: 230px;
+  width: 240px;
   position: fixed;
-  left: -20%;
+  left: -240px;
   top: 0;
+  z-index: 100;
   -moz-transition: 1s all;
   -o-transition: 1s all;
   -webkit-transition: 1s all;
@@ -72,15 +76,27 @@ a {
   height: 214px;
 }
 .Container_LeftNav li {
+  border-top: 3px solid red;
+  border-bottom: 3px solid red;
   list-style: none;
-  min-height: 34px;
-  padding-top: 16px;
-  padding-bottom: 16px;
+  height: 80px;
+  text-align: center;
+  word-break: break-word;
+  line-height: 3em;
+  padding: 1em 0;
+  box-shadow: 1px 3px 3px rgba(10, 9, 9, 0.3);
   transition: 1s all;
 }
+.Container_LeftNav li:nth-child(3),
+.Container_LeftNav li:nth-child(2),
+.Container_LeftNav li:nth-child(1) {
+  border-bottom: none;
+}
 .Container_LeftNav a {
+  color: #fff;
   padding-left: 21px;
   font-size: 18px;
+  text-shadow: 3px 5px 5px rgba(10, 9, 9, 0.3);
 }
 .Container_LeftNav li:hover,
 .Container_LeftNav li:visited {
@@ -102,7 +118,9 @@ a {
   transition: 1s all;
 }
 #Container_ExpandControlLabel:hover {
-  background-color: rgba(10, 9, 9, 0.3);
+  width: 2%;
+  background-color: coral;
+  box-shadow: 3px 5px 5px rgba(10, 9, 9, 0.3);
   -moz-transition: 1s all;
   -o-transition: 1s all;
   -webkit-transition: 1s all;
@@ -116,8 +134,7 @@ a {
   visibility: hidden;
 }
 #Container_ExpandControl:checked ~ #Container_ExpandControlLabel {
-  background-color: rgba(10, 9, 9, 0.3);
-  left: 20%;
+  left: 0;
   z-index: 20;
   -moz-transition: 1s all;
   -o-transition: 1s all;
@@ -125,7 +142,7 @@ a {
   transition: 1s all;
 }
 #Container_ExpandControl:checked ~ #Container_Page {
-  left: 20%;
+  left: 227px;
   z-index: 10;
   -moz-transition: 1s all;
   -o-transition: 1s all;
@@ -133,7 +150,7 @@ a {
   transition: 1s all;
 }
 #Container_ExpandControl:checked ~ #Container_Page .Container_LeftNav {
-  left: 0%;
+  left: -12px;
   z-index: 20;
   -moz-transition: 1s all;
   -o-transition: 1s all;
@@ -142,7 +159,7 @@ a {
 }
 .Container_Header {
   position: relative;
-  background-color: rgba(10, 9, 9, 0.3);
+  background-color: rgba(10, 9, 9, 0.1);
   box-shadow: 2px 3px 3px rgba(10, 9, 9, 0.3) inset;
   width: 100%;
   height: 144px;
@@ -155,6 +172,28 @@ a {
   height: inherit;
   width: inherit;
   background: url('Images/lottery-banner.jpg') center;
+}
+.Container_Header .logo {
+  position: absolute;
+  top: -5%;
+  text-align: left;
+  max-width: 440px;
+  z-index: 10;
+}
+.Container_Header span {
+  position: absolute;
+  left: 140px;
+  top: 45%;
+  display: inline-block;
+  vertical-align: middle;
+  font-size: 3.5em;
+  font-variant: small-caps;
+  color: red;
+  font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+  border: 5px solid red;
+  box-shadow: 3px 5px 5px rgba(10, 9, 9, 0.3);
+  text-shadow: 3px 5px 5px rgba(10, 9, 9, 0.3);
+  padding: 0 32px 0 32px;
 }
 .IContainer_ContentBody_Nav {
   display: block;
@@ -246,18 +285,20 @@ a {
   display: inline-block;
   vertical-align: top;
   padding-left: 2.5em;
-  padding-top: 1.3em;
+  padding-top: 2.5em;
 }
 .Container_ContentBody_Form .editCol {
   min-width: 200px;
 }
 .Container_ContentBody_Form label,
-.Container_ContentBody_Form input {
+.Container_ContentBody_Form input,
+.Container_ContentBody_Form select {
   display: block;
   font-size: 18px;
   margin: .5em 0 .5em;
 }
-.Container_ContentBody_Form label ~ input {
+.Container_ContentBody_Form label ~ input,
+.Container_ContentBody_Form select {
   height: 27px;
   width: 80%;
   max-width: 220px;
@@ -277,16 +318,18 @@ a {
   top: 65vh;
   right: 40px;
   padding: 8px;
-  min-width: 144px;
+  min-width: 240px;
+  height: 50px;
   max-width: 50%;
   background-color: transparent;
-  border: 4px solid #000;
+  border: 3px solid red;
+  font-size: 18px;
+  text-transform: uppercase;
   transition: 1s all;
 }
 .Container_ContentBody_Form input[type="Submit"]:hover {
-  background-color: red;
-  border: 4px solid rgba(255, 0, 0, 0.73);
-  transition: 1s all;
+  border: 6px solid red;
+  transition: .5s all;
 }
 .Container_ContentBody_ListView {
   border-left: 3px solid #000;
