--- a/Project.Lottery.Webforms/App_Themes/Main/Main.less
+++ b/Project.Lottery.Webforms/App_Themes/Main/Main.less
@@ -248,8 +248,11 @@ a {
         position: absolute;
         left: 140px;
         top: 45%;
+        min-width: 680px;
+
         display: inline-block;
         vertical-align: middle;
+        /*text-align: center;*/
 
         font-size: 3.5em;
         font-variant: small-caps;
@@ -384,7 +387,12 @@ a {
 
     vertical-align: top;
     padding-left: 2.5em;
-    padding-top: 2.5em;
+    padding-top: 2.25em;
+
+    //==== START || VIEW BUTTON CONTROL
+
+
+    //==== END || VIEW BUTTON CONTROL
 
     .editCol {
         min-width: 200px;
@@ -415,14 +423,16 @@ a {
         scrollbar-arrow-color: transparent;
     }
 
+
     input[type="Submit"] {
-        position: absolute;
-        top: 65vh;
-        right: 40px;
+        position: relative;
+        margin: 16px 0;
+        /*top: 65vh;
+        right: 40px;*/
 
         padding: 8px;
-        min-width: 240px;
-        height: 50px;
+        min-width: 140px;
+        height: 44px;
         max-width: 50%;
 
         background-color: transparent;
