--- a/Project.Lottery.Webforms/MasterPages/BaseSkin.Master
+++ b/Project.Lottery.Webforms/MasterPages/BaseSkin.Master
@@ -8,9 +8,12 @@
 
 <html>
 <head runat="server">
-		<title></title>
-		<asp:ContentPlaceHolder ID="head" runat="server">
-		</asp:ContentPlaceHolder>
+	<title></title>
+	<asp:ContentPlaceHolder ID="head" runat="server">
+	</asp:ContentPlaceHolder>
+
+	<script type="text/javascript" src="../Scripts/jquery-3.1.1.min.js" ></script>
+
 </head>
 
 <body>
